--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ title_separator          : "-"
 name                     : &name "Xiaoyu Wang"
 description              : &description "Ph.D. student at Nanjing University"
 url                      : https://xiaoyuwang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "xiaoyuwang18/xiaoyuwang.github.io"
+baseurl                  : "/webpage" # the subpath of your site, e.g. "/blog"
+repository               : "xiaoyuwang18/webpage"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
