--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ title                    : "Xiaoyu Wang"
 title_separator          : "-"
 name                     : &name "Xiaoyu Wang"
 description              : &description "Ph.D. student at Nanjing University"
-url                      : http://localhost:4000 # https://xiaoyuwang18.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "" # "/webpage" # the subpath of your site, e.g. "/blog"
+url                      : https://xiaoyuwang18.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "/webpage" # the subpath of your site, e.g. "/blog"
 repository               : "xiaoyuwang18/webpage"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
