--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Xiaoyu Wang"
   avatar           : "profile.png"
-  bio              : "Ph.D. student at Department of Computer Science and Technology, Nanjing University"
-  location         : "Nanjing, Jiangsu, China"
+  bio              : "Lecturer at School of Computer Science and Technology, Soochow University"
+  location         : "Suzhou, Jiangsu, China"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
-  email            : "xiaoyuwang18@smail.nju.edu.cn"
+  email            : "xywang21@suda.edu.cn"
   researchgate     : #"https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
